--- a/core/composer.json
+++ b/core/composer.json
@@ -26,7 +26,8 @@
         "symfony/serializer": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+        "vich/uploader-bundle": "^1.16"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.26",
