--- a/duFaitMaison/package.json
+++ b/duFaitMaison/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.1",
+    "angular-file-upload": "^2.6.1",
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.2",
     "jquery": "^3.5.1",
