fix bug recette creation + Fix bug display price + other adjustments

--- a/core/config/routes.yaml
+++ b/core/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+recette_delete_image:
+    path: /api/image/{name}
+    methods: ['DELETE']
+    defaults:
+        _controller: App\Controller\Api\ImageRecetteController::removeImage
+        _api_resource_class: App\Entity\Image
+        _api_item_operation_name: delete_image
