--- a/duFaitMaison/package.json
+++ b/duFaitMaison/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
+    "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "~11.0.3",
     "@types/bootstrap": "^5.0.1",
     "@types/jasmine": "~3.6.0",
