--- a/core/.env
+++ b/core/.env
@@ -27,9 +27,15 @@ APP_SECRET=45139ac126bafec41cb5092516850082
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL=mysql://root:@127.0.0.1:3306/dufaitmaison
+DATABASE_URL=mysql://root:root@mariadb:3306/dufaitmaison
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=8bbf0235033ff860e6737549c92ea372
+###< lexik/jwt-authentication-bundle ###
