--- a/core/composer.json
+++ b/core/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "lexik/jwt-authentication-bundle": "^2.16",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "4.4.*",
@@ -20,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/http-client": "4.4.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "4.4.*",
         "symfony/property-info": "4.4.*",
         "symfony/proxy-manager-bridge": "4.4.*",
@@ -31,14 +33,16 @@
         "vich/uploader-bundle": "^1.16"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.26",
-        "symfony/web-server-bundle": "4.4.*"
+        "symfony/maker-bundle": "^1.26"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
