--- a/core/config/packages/api_platform.yaml
+++ b/core/config/packages/api_platform.yaml
@@ -1,7 +1,12 @@
 api_platform:
-    mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
-    patch_formats:
-        json: ['application/merge-patch+json']
-    swagger:
-        versions: [3]
+  mapping:
+    paths: ["%kernel.project_dir%/src/Entity"]
+  patch_formats:
+    json: ["application/merge-patch+json"]
+  swagger:
+    api_keys:
+      apiKey:
+        name: Authorization
+        type: header
+    versions: [3]
+  enable_swagger_ui: false
