--- a/core/config/routes.yaml
+++ b/core/config/routes.yaml
@@ -2,9 +2,14 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 recette_delete_image:
-    path: /api/image/{name}
-    methods: ['DELETE']
-    defaults:
-        _controller: App\Controller\Api\ImageRecetteController::removeImage
-        _api_resource_class: App\Entity\Image
-        _api_item_operation_name: delete_image
+  path: /api/image/{name}
+  methods: ["DELETE"]
+  defaults:
+    _controller: App\Controller\Api\ImageRecetteController::removeImage
+    _api_resource_class: App\Entity\Image
+    _api_item_operation_name: delete_image
+api_login_check:
+  path: /api/login_check
+swagger_ui:
+  path: /docs
+  controller: api_platform.swagger.action.ui
