--- a/front/angular.json
+++ b/front/angular.json
@@ -53,7 +53,8 @@
                         ],
                         "styles": [
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "src/styles.css"
+                            "src/styles.css",
+                            "@angular/material/prebuilt-themes/indigo-pink.css"
                         ],
                         "scripts": []
                     },
