--- a/front/package.json
+++ b/front/package.json
@@ -2,8 +2,10 @@
   "name": "du-fait-maison",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
+    "dev": "ng serve --host 0.0.0.0 --watch",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,13 +14,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.3",
-    "@angular/cdk": "^11.0.3",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
-    "@angular/core": "~11.0.3",
+    "@angular/core": "^11.0.9",
     "@angular/forms": "~11.0.3",
     "@angular/localize": "~11.0.3",
-    "@angular/material": "^11.0.3",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
@@ -28,6 +30,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.1",
     "angular-file-upload": "^2.6.1",
+    "angular-typewriter-effect": "0.0.1",
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.2",
     "jquery": "^3.5.1",
