--- a/core/config/services.yaml
+++ b/core/config/services.yaml
@@ -33,16 +33,8 @@ services:
     class: App\EventListener\RecipeListener
     arguments: ["@security.helper"]
     tags:
-      - {
-          name: "doctrine.orm.entity_listener",
-          event: "postUpdate",
-          entity: 'App\Entity\RecetteDFM',
-        }
-      - {
-          name: "doctrine.orm.entity_listener",
-          event: "postPersist",
-          entity: 'App\Entity\RecetteDFM',
-        }
+      - { name: doctrine.event_listener, event: preUpdate }
+      - { name: doctrine.event_listener, event: prePersist }
   dfm.jwt_token_authenticator:
     class: App\Security\JWT\JwtTokenAuthenticator
 
