feat: upgrade SF4.4 to SF5.4 & upgrading authentication system & refacto front code

--- a/core/config/packages/api_platform.yaml
+++ b/core/config/packages/api_platform.yaml
@@ -1,4 +1,8 @@
 api_platform:
+  metadata_backward_compatibility_layer: false
+  defaults:
+    normalization_context:
+      skip_null_values: true
   mapping:
     paths: ["%kernel.project_dir%/src/Entity"]
   patch_formats:
