--- a/core/config/packages/doctrine.yaml
+++ b/core/config/packages/doctrine.yaml
@@ -12,12 +12,12 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: annotation
+                type: attribute
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
             loggable:
-                type: annotation # or attribute
+                type: attribute # annotation or attribute
                 alias: Gedmo
                 prefix: Gedmo\Loggable\Entity
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Loggable/Entity"
