--- a/core/config/packages/security.yaml
+++ b/core/config/packages/security.yaml
@@ -1,4 +1,7 @@
 security:
+  enable_authenticator_manager: true
+  # password_hashers:
+  #     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'  
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
     app_user_provider:
@@ -14,7 +17,6 @@ security:
     login:
       pattern: ^/api/login
       stateless: true
-      anonymous: true
       json_login:
         provider: app_user_provider
         check_path: api_login_check
@@ -25,25 +27,12 @@ security:
     register:
       pattern: ^/api/user/create
       stateless: true
-      anonymous: true
     api:
-      anonymous: true
       pattern: ^/api
       stateless: true
       provider: app_user_provider
-      guard:
-        authenticators:
-          - dfm.jwt_token_authenticator
-          #- lexik_jwt_authentication.jwt_token_authenticator
-
-    #main:
-    #  anonymous: lazy
-    #  provider: users_in_memory
-
-    # activate different ways to authenticate
-    # https://symfony.com/doc/current/security.html#firewalls-authentication
-    # https://symfony.com/doc/current/security/impersonating_user.html
-    # switch_user: true
+      custom_authenticator: App\Security\JWT\JwtTokenAuthenticator
+      logout: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
@@ -55,7 +44,12 @@ security:
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     #- { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
-  encoders:
-    App\Entity\User:
-      algorithm: auto
-      cost: 14
+  # encoders:
+  #   App\Entity\User:
+  #     algorithm: auto
+  #     cost: 14
+  password_hashers:
+    App\Entity\User: 'auto'
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+        algorithm: 'auto'
+        cost: 15
