--- a/core/config/services.yaml
+++ b/core/config/services.yaml
@@ -29,14 +29,30 @@ services:
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
+  # user_provider:
+  #   class: Symfony\Bridge\Doctrine\Security\User\EntityUserProvider
+  #   arguments:
+  #       - '@doctrine'
+  #       - 'App\Entity\User'
   recipe.listener:
     class: App\EventListener\RecipeListener
     arguments: ["@security.helper"]
     tags:
       - { name: doctrine.event_listener, event: preUpdate }
       - { name: doctrine.event_listener, event: prePersist }
-  dfm.jwt_token_authenticator:
-    class: App\Security\JWT\JwtTokenAuthenticator
+  dfm.user_provider:
+    class: App\Security\UserProvider
+    
+  # dfm.jwt_token_authenticator:
+  #   class: App\Security\JWT\JwtTokenAuthenticator
+  #   parent: lexik_jwt_authentication.security.jwt_authenticator
+    # arguments: ['@dfm.user_provider']
+    # arguments:
+    #   - '@lexik_jwt_authentication.jwt_manager'
+    #   - '@debug.event_dispatcher'
+    #   - '@lexik_jwt_authentication.extractor.chain_extractor'
+    #   - '@user_provider'
+    #   - '@App\Repository\UserRepository'
 
   #dfm.on_authentifcation_successful:
   #  class: App\EventListener\LoginSuccessListener
