--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^8.1.2",
     "jquery": "^3.5.1",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "primeflex": "3.2.0",
     "primeicons": "^6.0.1",
