--- a/front/package.json
+++ b/front/package.json
@@ -31,7 +31,8 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@ng-select/ng-select": "^9.1.0",
     "angular-file-upload": "^2.6.1",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "firebase": "^8.1.2",
     "jquery": "^3.5.1",
     "moment": "^2.29.4",
