--- a/core/config/services.yaml
+++ b/core/config/services.yaml
@@ -72,3 +72,6 @@ services:
     tags:
       - { name: api_platform.doctrine.orm.query_extension.collection }
       - { name: api_platform.doctrine.orm.query_extension.item }
+
+  'App\Filter\CategoryFiler':
+    tags: ["api_platform.filter"]
