--- a/front/angular.json
+++ b/front/angular.json
@@ -54,7 +54,10 @@
                             "node_modules/primeng/resources/themes/saga-blue/theme.css",
                             "node_modules/primeng/resources/primeng.min.css",
                             "node_modules/primeflex/primeflex.css",
-                            "node_modules/primeicons/primeicons.css"
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/font-awesome/css/font-awesome.css",
+                            "node_modules/leaflet/dist/leaflet.css",
+                            "src/styles.scss"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.slim.min.js",
