--- a/front/package.json
+++ b/front/package.json
@@ -24,23 +24,40 @@
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
+    "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@ng-select/ng-select": "^9.1.0",
+    "@types/chart.js": "^2.9.37",
+    "@types/geojson": "^7946.0.10",
+    "@types/gsap": "^3.0.0",
+    "angular-bootstrap-md": "^14.0.0",
     "angular-file-upload": "^2.6.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^2.5.0",
+    "eslint": "^8.47.0",
     "firebase": "^8.1.2",
+    "font-awesome": "^4.7.0",
+    "gsap": "^3.12.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.0",
+    "leaflet": "^1.9.4",
+    "mdb-angular-ui-kit": "^3.0.1",
     "moment": "^2.29.4",
+    "ngx-gallery-14": "^14.0.1",
+    "ngx-skeleton-loader": "^6.0.0",
     "popper.js": "^1.16.1",
     "primeflex": "3.2.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.0.0",
     "rxjs": "^7.8.0",
+    "swiper": "^10.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -51,8 +68,10 @@
     "@types/bootstrap": "^5.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/q": "^1.5.5",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
@@ -60,9 +79,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.6.4"
   }
 }
