feat(Message): add an new feature and bugs fixes

--- a/core/config/services.yaml
+++ b/core/config/services.yaml
@@ -71,6 +71,10 @@ services:
     tags:
       - { name: api_platform.doctrine.orm.query_extension.collection }
       - { name: api_platform.doctrine.orm.query_extension.item }
+  'App\Doctrine\SenderLoggedInUserExtension':
+    tags:
+      - { name: api_platform.doctrine.orm.query_extension.collection }
+      - { name: api_platform.doctrine.orm.query_extension.item }
 
   'App\Filter\CategoryFiler':
     tags: ["api_platform.filter"]
