feat(upgrade symfony version): 5.4 to 6.1

--- a/core/composer.json
+++ b/core/composer.json
@@ -5,50 +5,53 @@
         "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^2.7.11",
-        "composer/package-versions-deprecated": "1.11.99.1",
+        "api-platform/core": "^3.2",
+        "composer/package-versions-deprecated": "1.11.99.5",
         "doctrine/annotations": "^2.0.1",
-        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-bundle": "^2.11.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.11",
+        "doctrine/orm": "^2.17",
         "fakerphp/faker": "^1.22",
         "gedmo/doctrine-extensions": "^3.11",
-        "lexik/jwt-authentication-bundle": "^2.18.1",
-        "nelmio/cors-bundle": "^2.1",
-        "phpdocumentor/reflection-docblock": "^5.2",
+        "lexik/jwt-authentication-bundle": "^2.20.3",
+        "nelmio/cors-bundle": "^2.4",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.24",
         "ramsey/uuid-doctrine": "^2.0",
-        "symfony/asset": "5.4.*",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
-        "symfony/expression-language": "5.4.*",
-        "symfony/finder": "5.4.*",
+        "symfony/asset": "6.1.*",
+        "symfony/console": "6.1.*",
+        "symfony/deprecation-contracts": "*",
+        "symfony/dotenv": "6.1.*",
+        "symfony/expression-language": "6.1.*",
+        "symfony/finder": "6.1.*",
         "symfony/flex": "^2.2.5",
-        "symfony/form": "5.4.*",
-        "symfony/framework-bundle": "5.4.*",
-        "symfony/http-client": "5.4.*",
-        "symfony/monolog-bundle": "^3.8",
-        "symfony/options-resolver": "5.4.*",
-        "symfony/password-hasher": "5.4.*",
-        "symfony/property-access": "5.4.*",
-        "symfony/property-info": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*",
-        "symfony/security-bundle": "5.4.*",
-        "symfony/serializer": "5.4.*",
-        "symfony/twig-bundle": "5.4.*",
-        "symfony/uid": "5.4.*",
-        "symfony/validator": "5.4.*",
-        "symfony/workflow": "5.4.*",
-        "symfony/yaml": "5.4.*",
-        "vich/uploader-bundle": "^1.16"
+        "symfony/form": "6.1.*",
+        "symfony/framework-bundle": "6.1.*",
+        "symfony/http-client": "6.1.*",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/options-resolver": "6.1.*",
+        "symfony/password-hasher": "6.1.*",
+        "symfony/property-access": "6.1.*",
+        "symfony/property-info": "6.1.*",
+        "symfony/proxy-manager-bridge": "6.1.*",
+        "symfony/runtime": "6.1.*",
+        "symfony/security-bundle": "6.1.*",
+        "symfony/serializer": "6.1.*",
+        "symfony/twig-bundle": "6.1.*",
+        "symfony/uid": "6.1.*",
+        "symfony/validator": "6.1.*",
+        "symfony/workflow": "6.1.*",
+        "symfony/yaml": "6.1.*",
+        "vich/uploader-bundle": "^2.3"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^3.17",
         "phpunit/php-code-coverage": "^9.2",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "5.4.*",
-        "symfony/css-selector": "5.4.*",
-        "symfony/maker-bundle": "^1.26",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
+        "symfony/maker-bundle": "^1.50",
         "symfony/phpunit-bridge": "^6.2"
     },
     "config": {
@@ -57,7 +60,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "symfony/flex": true
+            "symfony/flex": true,
+            "symfony/runtime": true
         }
     },
     "autoload": {
@@ -98,7 +102,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.1.*"
         }
     }
 }
