--- a/core/config/packages/security.yaml
+++ b/core/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
   enable_authenticator_manager: true
   # password_hashers:
-  #     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'  
+  #     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
     app_user_provider:
@@ -37,10 +37,10 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/api/last_three_recipes, roles: IS_AUTHENTICATED_ANONYMOUSLY}
-    - { path: ^/api/user/create, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/api/latest_recipes_posted, roles: PUBLIC_ACCESS }
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/user/create, roles: PUBLIC_ACCESS }
+    - { path: ^/docs, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     #- { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
@@ -49,7 +49,7 @@ security:
   #     algorithm: auto
   #     cost: 14
   password_hashers:
-    App\Entity\User: 'auto'
+    App\Entity\User: "auto"
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-        algorithm: 'auto'
-        cost: 15
+      algorithm: "auto"
+      cost: 15
