--- a/front/package.json
+++ b/front/package.json
@@ -26,19 +26,20 @@
     "@angular/router": "^14.2.12",
     "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "@ng-select/ng-select": "^9.1.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "@types/chart.js": "^2.9.37",
     "@types/geojson": "^7946.0.10",
     "@types/gsap": "^3.0.0",
     "angular-bootstrap-md": "^14.0.0",
     "angular-file-upload": "^2.6.1",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.5",
     "chart.js": "^2.5.0",
     "eslint": "^8.47.0",
