--- a/core/.gitignore
+++ b/core/.gitignore
@@ -12,11 +12,13 @@
 /var/
 /vendor/
 /composer.lock
+.php-version
 ###< symfony/framework-bundle ###
 
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
